# roboar

./: .gitignore  CLAUDE.md  README.md  go.mod  go.sum
.claude/skills/deploy-registry/: SKILL.md
.claude/skills/registry-e2e/: SKILL.md
.github/workflows/: ci.yml  deploy-registry.yml
cmd/registry/: main.go
db/: embed.go
db/migrations/: 0001_registry_schema.sql  0002_identity_kind_tunnel_supports.sql  0003_self_register.sql
deploy/: Caddyfile.registry  README.md  bootstrap.sh  registry.service  setup.sh
internal/auth/: agent_sig.go  agent_sig_test.go  auth.go  auth_test.go  wallet.go  wallet_test.go
internal/config/: config.go
internal/ids/: ids.go
internal/model/: model.go
internal/server/: agents.go  discovery.go  identities.go  mcp.go  owners.go  platforms.go  self_register.go  server.go  server_test.go
internal/store/: agents.go  capabilities.go  discovery.go  identities.go  owners.go  platforms.go  self_register.go  store.go
scripts/: e2e-local.sh
sdk/python/: README.md  pyproject.toml
sdk/python/rar/: __init__.py  agent.py  agent_cli.py  agent_client.py  cli.py  client.py  keys.py  robot_agent.py  session.py
sdk/python/roboar/: __init__.py  agent.py  agent_client.py  cli.py  client.py  keys.py  robot_agent.py  session.py
