[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rar-agent"
version = "0.1.0"
description = "Robot Agent Registry — platform-side SDK and CLI (rar / rar-agent)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
dependencies = [
    "cryptography>=41.0",
]

[project.scripts]
rar = "rar.cli:main"
rar-agent = "rar.agent_cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["rar*"]
