[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "roboar"
version = "0.3.0"
description = "Robot Agent Registry — SDK and CLI"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
dependencies = [
    "cryptography>=41.0",
]

[project.scripts]
roboar = "roboar.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["roboar*"]
